# ml_ramverk_lab2

./: README.md  data.dvc  dd.ipynb  main.py  pyproject.toml
outputs/runs/exp1/: model.pt
outputs/runs/exp2/: model.pt
outputs/runs/exp3/: model.pt
src/: dataset.py  model.py  train.py  utils.py
